--- a/.github/workflows/hello-world-template-shared.yml
+++ b/.github/workflows/hello-world-template-shared.yml
@@ -19,5 +19,5 @@ jobs:
         run: echo "Hello World ${{ inputs.input_name }}"
       
       - name: Hello World Template Secret
-        run: echo "Secret ${{ secrets.hello-secret }}"
+        run: echo "Secret ${{ secrets.hello-secret == 'its a secret' }}"
         
